<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CustomizationSelector</string>
    <string name="customization_restart_desc_txt">Your device will now restart to be optimized for your network operator.</string>
    <string name="debug_button_txt">Restore initial modem and state</string>
    <string name="debug_current_modem_txt">Current modem</string>
    <string name="debug_initial_modem_txt">Initial modem</string>
    <string name="debug_select_modem_restart_txt">"Please select modem. When you're done, the device will restart."</string>
    <string name="debug_single_modem_fs_txt">No modems found on the device.</string>
    <string name="debug_swap_modem_txt">Switch modem</string>
    <string name="debug_verify_text">Do you want to apply %1$s?</string>
    <string name="debug_verify_title">Verify modem selection</string>
    <string name="reboot_reason">CustomizationSelector will reboot device to apply new configuration</string>
    <string name="reboot_reason_modem_debug">Debugmenu - CustomizationSelector will reboot device to apply new modem</string>
    <string name="back_button_label">Back</string>
    <string name="more_button_label">More</string>
    <string name="next_button_label">Next</string>
    <string name="modem_switcher_report">Modem Switcher Report</string>
    <string name="modem_switcher_status">Modem Switcher Status</string>
    <string name="file_not_found">File not found</string>
    <string name="search_modem">Search modem</string>
</resources>
